@startuml

title __RESTAPI's Class Diagram__\n

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.ApiGatewayClientWrapper {
        {static} - apiGatewayClient : ApiGatewayClient
        {static} - region : Region
        {static} + createRestApi()
        {static} + deleteRestApi()
        {static} - execute()
        {static} + getRestApi()
        {static} + importRestApi()
        {static} + putRest Api()
        {static} + updateRestApi()
        {static} + updateTags()
    }
  }

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.CreateHandler {
        {static} + gson : Gson
        + getCreateRestApiRequest()
        + getImportRestApiRequest()
        + handleRequest
    }
  }

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.DeleteHandler {
        + handleRequest()
    }
  }

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.ReadHandler {
        + handleRequest()
    }
  }
  

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.S3ClientWrapper {
        ~ s3Client : S3Client
    }
  }

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.RestApiUtils {
        {static} - mapper : ObjectMapper
        {static} + getTypesToCreateOrRemove()
        {static} + newPatchOperations()
        {static} + useImportApi()
        {static} + validateRestApiResource()
        {static} - toString()
    }
  }

  namespace software.amazon.apigateway.restapi {
    class software.amazon.apigateway.restapi.UpdateHandler {
        {static} + gson : Gson
        {static} - REST_API_DEFAULT_TYPE : String
        - getPutRestApiRequest()
        + handleRequest()
        - getAttributesToRemove()
        - getAttributesToReplace()
        - getEndpointType()
        - getUpdateRestApiRequest()
    }
  }

  namespace software.amazon.cloudformation.proxy {
      class software.amazon.cloudformation.proxy.AmazonWebServicesClientProxy {
          + injectCredentialsAndInvokeV2 (This function makes the network call to APIGW CP)
          - ......
      }
    }

  software.amazon.apigateway.restapi.CreateHandler -up-|> software.amazon.apigateway.restapi.BaseHandler
  software.amazon.apigateway.restapi.DeleteHandler -up-|> software.amazon.apigateway.restapi.BaseHandler
  software.amazon.apigateway.restapi.ReadHandler -up-|> software.amazon.apigateway.restapi.BaseHandler
  software.amazon.apigateway.restapi.UpdateHandler -up-|> software.amazon.apigateway.restapi.BaseHandler

   software.amazon.apigateway.restapi.CreateHandler --> software.amazon.apigateway.restapi.ApiGatewayClientWrapper : Function Call
   note on link #white: createRestApi or importRestApi

   software.amazon.apigateway.restapi.CreateHandler --> software.amazon.apigateway.restapi.S3ClientWrapper : Function Call
    note on link #white: getObjectRequest

    software.amazon.apigateway.restapi.UpdateHandler --> software.amazon.apigateway.restapi.S3ClientWrapper : Function Call
        note on link #white: getObjectRequest

   software.amazon.apigateway.restapi.UpdateHandler --> software.amazon.apigateway.restapi.ApiGatewayClientWrapper : Function Call
      note on link #white: updateRestApi or putRestApi or updateTags

   software.amazon.apigateway.restapi.DeleteHandler --> software.amazon.apigateway.restapi.ApiGatewayClientWrapper : Function Call
      note on link #white: deleteRestApi

   software.amazon.apigateway.restapi.ReadHandler --> software.amazon.apigateway.restapi.ApiGatewayClientWrapper : Function Call
      note on link #white: getRestApi

   software.amazon.apigateway.restapi.ApiGatewayClientWrapper --> software.amazon.cloudformation.proxy.AmazonWebServicesClientProxy: Function Call
      note on link #white: injectCredentialsAndInvokeV2

    software.amazon.apigateway.restapi.S3ClientWrapper --> software.amazon.cloudformation.proxy.AmazonWebServicesClientProxy: Function Call
          note on link #white: injectCredentialsAndInvokeV2

right footer

PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
